2007-11-15  Geoff Norton  <gnorton@novell.com>

	* gtksourceview2-sharp.pc.in: Depend against gtk-sharp-2.0 not gnome-sharp-2.0

2007-11-15  Geoff Norton  <gnorton@novell.com>

	* gtksourceview/Makefile.am: Compile against gtk-sharp-2.0 not gnome-sharp-2.0

2007-11-15  Michael Hutchinson  <mhutchinson@novell.com>

	* sample/SourceViewTest.cs: List available styles in help message.
	
	* gtksourceview/SourceLanguageManager.custom:
	* gtksourceview/Gtk.metadata: Add some custom marshalling for 
	  a null-terminated string array property.

2007-11-02  Michael Hutchinson  <mhutchinson@novell.com>

	* sample/Makefile.am: Fix dist.
	
	* configure.in: Knock versioning down to 1.9.x until we're ready to 
	  make a proper release.
	  
	* Makefile.am:
	* vbnet.lang:
	* nemerle.lang: Remove .lang files, as they're distributed with GTKSV2.
	  
	* gtksourceview/gtksourceview2-sharp.dll.config.in: DllMap to 
	  gtksourceview-2.0 library rather than gtksourceview-1.0.

2007-10-29  Michael Hutchinson  <mhutchinson@novell.com>

	* gtksourceview/Gtk.metadata:
	* gtksourceview/SourceLanguage.custom: Fix some marshalling.
	  
	* sample/SourceViewTest.cs: Exercise one of the fixed properties.

2007-09-29  Michael Hutchinson <mhutchinson@novell.com>

	* sources/makefile, sources/gtksourceview2-sharp-sources.xml, 
	  configure.in, gtksourceview/gtksourceview2-api.raw,
	  gtksourceview2-sharp-sources.xml: Update version and API to 
	  GtkSourceView 2.0.0.

2007-09-11  Michael Hutchinson <mhutchinson@novell.com>

	* sources/makefile,
	  sources/gtksourceview2-sharp-sources.xml,
	  gtksourceview/gtksourceview2-api.raw,
	  configure.in: Updated GtkSourceView version to 1.90.5.
	  
	* gtksourceview/SourceBuffer.custom,
	  gtksourceview/Gtk.metadata: Updated to 1.90.5 API changes.

	* sample/Makefile.am: Copy the lib into this directory for 
	  convenience.

2007-08-28  Michael Hutchinson <m.j.hutchinson@gmail.com>

	* sources/makefile,
	  sources/gtksourceview2-sharp-sources.xml,